# Ejecutable_App_autoescuela

./: pyproject.toml  setup.py
src/driving_statistics/: main.py  mainc.py
src/driving_statistics/services/: charts.py  csv_importer.py  database.py  reports.py
src/driving_statistics/view/: filtres.py  main_window.py
